addons/elasticsearch/virtual-service-es.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: elasticsearch-rule
  namespace: elasticsearch
spec:
  hosts:
  - elasticsearch.example.com
  gateways:
  - elasticsearch/elasticsearch-gateway
  # - mesh # applies to all the sidecars in the mesh
  http:
  - route:
    - destination:
        host: elasticsearch.elasticsearch.svc.cluster.local
        port:
          number: 9200
